# bff-integration

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.main  Dockerfile.tests  README.md  env.example  pyproject.toml
core/clients/: auth_api.py  base.py  bff_api.py
core/consts/: timeouts.py
core/helpers/: ui_utils.py  unitnodes.py  utils.py
core/models/: org_nodes.py  physical_quantity.py  tag.py  unit_marks.py  unit_nodes.py  unit_type.py  user.py
core/pages/: auth.py  base.py  rules.py  settings_org_tree.py  unit_nodes_editor.py
core/pages/blocks/: add_tag_form.py  org_node_create_form.py  org_node_delete_form.py  org_node_edit_form.py  rules_create_form.py  rules_delete_form.py  sidebar.py
core/plugins/: snapshot.py
docs/: org_trees_structure.puml  root_node.puml
docs/postman/: eryzhov.postman_environment.json  s2g.postman_collection.json
tests/: conftest.py
tests/api/: test_login.py
tests/api/org_trees/: conftest.py  test_org_tree.py
tests/ui/: conftest.py  test_add_unit_ui.py  test_create_company_ui.py  test_crud_company_ui.py  test_crud_org_unit_ui.py  test_crud_unit_node_ui.py  test_crud_unit_type_ui.py  test_login.py  test_login_ui.py  test_logout_ui.py
tests/ui/login_page/: test_login_page_ui.py
tests/ui/org_trees/: conftest.py  test_administration_page_ui.py  test_org_tree_ui.py
tests/ui/rules_page/: conftest.py  test_rules_page_ui.py
